@@ -27,16 +27,20 @@
 from enum import Enum
 from os.path import abspath
 
+import numpy as np
+
 from pwem.protocols import EMProtocol
 from pyworkflow import BETA
-from pyworkflow.protocol import params, PointerParam, GPU_LIST, LEVEL_ADVANCED
+from pyworkflow.object import Integer
+from pyworkflow.protocol import params, PointerParam, GPU_LIST, LEVEL_ADVANCED, FloatParam, GT, LT
 from pyworkflow.utils.properties import Message
 
-from deepfinder import Plugin
+from deepfinder import Plugin, DF_CLASS_LABEL
 import deepfinder.convert as cv
 from deepfinder.objects import DeepFinderNet
 
 from deepfinder.protocols import ProtDeepFinderBase
+from tomo.constants import BOTTOM_LEFT_CORNER
 from tomo.protocols import ProtTomoBase
 from tomo.objects import SetOfTomoMasks
 
@@ -77,9 +81,18 @@ class DeepFinderTrain(EMProtocol, ProtDeepFinderBase, ProtTomoBase):
         form.addParam('tomoMasksValid', PointerParam,
                       pointerClass='SetOfTomoMasks',
                       label="Validation TomoMasks",
-                      important=True,
-                      help='Validation dataset. Please select here your TomoMasks. '
-                           'The corresponding tomograms will be loaded automatically.')
+                      allowsNull=True,
+                      help='Validation dataset. If empty, the tomo mask will be randomly split following the '
+                           'fraction specified in the parameter "Validation data fraction".')
+
+        form.addParam('valDataFraction', FloatParam,
+                      label='Validation data fraction',
+                      default=0.3,
+                      validators=[GT(0.1), LT(0.5)],
+                      condition='not tomoMasksValid',
+                      help='Fraction of the "Training Tomomasks" that will be used as validation dataset. The admitted '
+                           'values are [0.1, 0.5], which means from 10% to 50% of the introduced training tomo masks. '
+                           'Only applies if "Validation TomoMasks" is empty.')
 
         form.addParam('coord', params.PointerParam,
                       label="Coordinates",
@@ -140,61 +153,24 @@ class DeepFinderTrain(EMProtocol, ProtDeepFinderBase, ProtTomoBase):
 
     # --------------------------- STEPS functions ------------------------------
     def _insertAllSteps(self):
-        # Insert processing steps
         self._insertFunctionStep(self.trainingStep)
         self._insertFunctionStep(self.createOutputStep)
 
-    def trainingStepOLD(self):
-        # Get paths to tomograms and corresponding targets:
-        path_tomo = []
-        path_segm = []
-        for segm in self.targets.get().iterItems():
-            fname_segm = segm.getFileName()
-            fname_tomo = segm.getVolName()
-            path_tomo.append(fname_tomo)
-            path_segm.append(fname_segm)
-
-        # Get objl_train and objl_valid and save to temp folder:
-        objl_train = self._getObjlFromInputCoordinates(self.targets.get(), self.coordTrain.get())
-        objl_valid = self._getObjlFromInputCoordinates(self.targets.get(), self.coordValid.get())
-
-        fname_objl_train = abspath(self._getExtraPath('objl_train.xml'))
-        cv.objl_write(objl_train, fname_objl_train)
-        fname_objl_valid = abspath(self._getExtraPath('objl_valid.xml'))
-        cv.objl_write(objl_valid, fname_objl_valid)
-
-        # Get number of classes from objl, and store as attribute (useful for output step):
-        self.nClass = len(cv.objl_get_labels(objl_train)) + 1  # (+1 for background class)
-
-        # Save parameters to xml file:
-        params = cv.ParamsTrain()
-
-        params.path_out = abspath(self._getExtraPath()) + '/'
-        params.path_tomo = path_tomo
-        params.path_target = path_segm
-        params.path_objl_train = fname_objl_train
-        params.path_objl_valid = fname_objl_valid
-        params.Ncl = self.nClass
-        params.psize = self._decodeContValue(getattr(self, 'psize').get())
-        params.bsize = self.bsize.get()
-        params.nepochs = self.epochs.get()
-        params.steps_per_e = self.stepsPerE.get()
-        params.steps_per_v = self.stepsPerV.get()
-        params.flag_direct_read = False  # in current deepfinder version only works with tomos/targets stored as h5
-        params.flag_bootstrap = self.bootstrap.get()
-        params.rnd_shift = self.rndShift.get()
-
-        fname_params = abspath(self._getExtraPath('params_train.xml'))
-        params.write(fname_params)
-
-        # Launch DeepFinder training:
-        deepfinder_args = '-p ' + fname_params
-        Plugin.runDeepFinder(self, 'train', deepfinder_args)
-
     def trainingStep(self):
-        # Get tomo paths, target paths, train objl and valid objl for DeepFinder:
-        path_tomos, path_targets, objl_train, objl_valid = self._getDeepFinderObjectsFromInput(
-            self.tomoMasksTrain.get(), self.tomoMasksValid.get(), self.coord.get())
+        tomoMasksTrain = self.tomoMasksTrain.get()
+        coords = self.coord.get()
+        # Get tomo paths, target paths, train objl and valid objl for DeepFinder
+        if self.tomoMasksValid.get():
+            path_tomos, path_targets, objl_train, objl_valid = self._getDeepFinderObjectsFromInput(
+                tomoMasksTrain, self.tomoMasksValid.get(), coords)
+        else:
+            nTomoMasks = len(tomoMasksTrain)
+            nValData = round(self.valDataFraction.get() * nTomoMasks)
+            randPermIdxs = np.random.permutation(range(nTomoMasks))
+            tomoMasksList = [tomoMask.clone() for tomoMask in tomoMasksTrain]
+            tomoMasksListSorted = [tomoMasksList[i] for i in randPermIdxs]  # List of tomo masks [validation, training] after randomization
+            path_tomos, path_targets = self._getPathListsFromTomoMaskSet(tomoMasksListSorted)
+            objl_train, objl_valid = self._getObjlFromInputCoordinatesV2(tomoMasksListSorted, coords, nValData)
 
         # Save objl to extra folder:
         fname_objl_train = abspath(self._getExtraPath('objl_train.xml'))
@@ -256,63 +232,76 @@ class DeepFinderTrain(EMProtocol, ProtDeepFinderBase, ProtTomoBase):
             list of dict : objl_valid
         """
         # Join the tomoMaskSets. 1st valid, then train. Order is important!
-        tomoMaskSetAll = self._joinSetsOfTomoMasks(tomoMaskSetValid, tomoMaskSetTrain, self._getPath())
+        tomoMaskList = self._setsOfTomoMasks2List(tomoMaskSetValid, tomoMaskSetTrain)
 
         # Get the file paths for tomos and targets (=tomoMasks)
-        path_tomos, path_targets = self._getPathListsFromTomoMaskSet(tomoMaskSetAll)
+        path_tomos, path_targets = self._getPathListsFromTomoMaskSet(tomoMaskList)
 
         # Get deepfinder objl from coord3DSet:
-        objl_all = self._getObjlFromInputCoordinatesV2(tomoMaskSetAll, coord3DSet)
+        objl_train, objl_valid = self._getObjlFromInputCoordinatesV2(tomoMaskList, coord3DSet, len(tomoMaskSetValid))
 
-        # Separate objl into objl_valid and objl_train:
-        Nvalid = tomoMaskSetValid.__len__()
-        Ntrain = tomoMaskSetTrain.__len__()
-
-        tidx_list_valid = list(range(Nvalid))
-        tidx_list_train = list(range(Nvalid, Nvalid + Ntrain))
-
-        objl_valid = []
-        for tidx in tidx_list_valid:
-            objl_valid = objl_valid + cv.objl_get_tomo(objl_all, tidx)
-
-        objl_train = []
-        for tidx in tidx_list_train:
-            objl_train = objl_train + cv.objl_get_tomo(objl_all, tidx)
+        # # Separate objl into objl_valid and objl_train:
+        # Nvalid = tomoMaskSetValid.__len__()
+        # Ntrain = tomoMaskSetTrain.__len__()
+        #
+        # tidx_list_valid = list(range(Nvalid))
+        # tidx_list_train = list(range(Nvalid, Nvalid + Ntrain))
+        #
+        # objl_valid = []
+        # for tidx in tidx_list_valid:
+        #     objl_valid = objl_valid + cv.objl_get_tomo(objl_all, tidx)
+        #
+        # objl_train = []
+        # for tidx in tidx_list_train:
+        #     objl_train = objl_train + cv.objl_get_tomo(objl_all, tidx)
 
         return path_tomos, path_targets, objl_train, objl_valid
 
+    # @staticmethod
+    # def _joinSetsOfTomoMasks(tomoMaskSet1, tomoMaskSet2, path):
+    #     """ Joins two tomoMaskSets.
+    #     Args:
+    #         tomoMaskSet1 (SetOfTomoMasks)
+    #         tomoMaskSet1 (SetOfTomoMasks)
+    #     Returns:
+    #         SetOfTomoMasks
+    #     """
+    #     # tomoMaskSet = SetOfTomoMasks()
+    #     tomoMaskSet = SetOfTomoMasks.create(path, template='setOfTomoMasks%s.sqlite')
+    #     tomoMaskSet.copyInfo(tomoMaskSet1)
+    #     tomoMaskSet.setName('target set')
+    #     for tomoMask in tomoMaskSet1:
+    #         tomoMaskSet.append(tomoMask)
+    #     for tomoMask in tomoMaskSet2:
+    #         tomoMaskSet.append(tomoMask)
+    #
+    #     return tomoMaskSet
+
     @staticmethod
-    def _joinSetsOfTomoMasks(tomoMaskSet1, tomoMaskSet2, path):
+    def _setsOfTomoMasks2List(valTomoMasksSet, trainTomoMasksSet):
         """ Joins two tomoMaskSets.
         Args:
-            tomoMaskSet1 (SetOfTomoMasks)
-            tomoMaskSet1 (SetOfTomoMasks)
+            valTomoMasksSet (SetOfTomoMasks)
+            trainTomoMasksSet (SetOfTomoMasks)
         Returns:
-            SetOfTomoMasks
+            List of TomoMask in ordered [validation masks, training masks]
         """
-        # tomoMaskSet = SetOfTomoMasks()
-        tomoMaskSet = SetOfTomoMasks.create(path, template='setOfTomoMasks%s.sqlite')
-        tomoMaskSet.copyInfo(tomoMaskSet1)
-        tomoMaskSet.setName('target set')
-        for tomoMask in tomoMaskSet1:
-            tomoMaskSet.append(tomoMask)
-        for tomoMask in tomoMaskSet2:
-            tomoMaskSet.append(tomoMask)
-
-        return tomoMaskSet
+        tomoMaskList = [tomoMask.clone() for tomoMask in valTomoMasksSet]
+        tomoMaskList.extend([tomoMask.clone() for tomoMask in trainTomoMasksSet])
+        return tomoMaskList
 
     @staticmethod
-    def _getPathListsFromTomoMaskSet(tomoMaskSet):
+    def _getPathListsFromTomoMaskSet(tomoMaskList):
         """ Gets the path lists needed by DeepFinder from protocol input.
         Args:
-            tomoMaskSet (SetOfTomoMasks)
+            tomoMaskList (List): list of tomo masks
         Returns:
             list of strings : path_tomos[]
             list of strings : path_targets[]
         """
         path_tomos = []
         path_targets = []
-        for tomoMask in tomoMaskSet:
+        for tomoMask in tomoMaskList:
             path_tomos.append(abspath(tomoMask.getVolName()))
             path_targets.append(abspath(tomoMask.getFileName()))
 
@@ -338,3 +327,16 @@ class DeepFinderTrain(EMProtocol, ProtDeepFinderBase, ProtTomoBase):
                                " In total, %s messages has been printed."
                                % (self.previousCount, self.count))
         return methods
+
+    def _validate(self):
+        errorMsg = []
+        trainTomoMasks = self.tomoMasksTrain.get()
+        valTomoMasks = self.tomoMasksValid.get()
+        if valTomoMasks and trainTomoMasks:
+            if len(valTomoMasks) > len(trainTomoMasks):
+                errorMsg.append('The validation masks set must be of the same or lower size than the training '
+                                'masks set.')
+        elif not valTomoMasks and len(trainTomoMasks) == 1:
+            errorMsg.append('If no validation tomo masks are provided, the size of the training masks set must '
+                            'be at least 2.')
+        return errorMsg
