@@ -1,5 +1,7 @@
 v3.1.0:
     - Target generation and segment protocols can be now parallelized using threads.
+    - The training and validation datasets can be both introduced manually or generated from the training dataset
+      specifying a fraction of data.
     - Fixes in the tomogram/tomomask assignment in the segment and cluster protocols.
     - Calling the DeepFinder viewer now offers an auxiliar window to previously select the tomogram to be displayed.
     - The background class in now considered internally by Scipion when importing a model.
